Hooked up images to market cards.

--- a/src/client/app/scripts/directives/marketCard.html
+++ b/src/client/app/scripts/directives/marketCard.html
@@ -1,5 +1,5 @@
 <div class="thumbnail product-card">
-      <img src="http://media.treehugger.com/assets/images/2011/10/farmer-john-cornfield.jpg" alt="{{market.name}}" class="pointer vendor-card-name"/>
+      <img ng-src="{{market.photo.image_url}}" alt="{{market.name}}" class="pointer vendor-card-name"/>
       <div class="caption market-caption">
 
         <div class="row">
