--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -96,6 +96,8 @@
         <script src="scripts/controllers/details.js"></script>        
         <script src="scripts/controllers/typeahead.js"></script>
         <script src="scripts/controllers/welcome.js"></script>
+        <script src="scripts/controllers/productsearch.js"></script>
+        <script src="scripts/controllers/vendorsearch.js"></script>
         <!-- endbuild -->
 </body>
 </html>
