--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -13,8 +13,8 @@
           <div class="input-group" ng-controller="TypeaheadCtrl">
             <input type="text" ng-model="search" placeholder="Search for vendors or products" class="form-control"
               ng-bind-html="match.label | typeaheadHighlight:query" 
-              typeahead-on-select='onSelect($item, $model, $label)'
-              typeahead="product for product in updateProductSuggestions($viewValue) | filter:$viewValue">
+              typeahead-on-select='onSelect($item, $model, $label)' 
+              typeahead="product.name for product in updateProductSuggestions($viewValue)">
 
             <span class="input-group-btn">
               <button class="btn beLocal-btn-filled" type="button">Search</button>
