--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -1,5 +1,6 @@
-<div class="navbar navbar-fixed-top navbar-default" role="navigation">
-  <div class="container-fluid nav-padding">
+<div class="navbar navbar-fixed-top navbar-default white-text" role="navigation">
+  <div class="container-fluid nav-padding nav-bar-top">
+    
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
@@ -7,8 +8,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">be<span class="beLocal-highlight">Local</span></a>
-      <form class="navbar-form navbar-left beLocal-search" role="search">
+    </div>
+      <!-- <a class="navbar-brand" href="#">be<span class="beLocal-highlight">Local</span></a> -->
+    <div class="pull-right">
+      <form class="navbar-form beLocal-search" role="search" >
         <div class="form-group">
           <div class="input-group">
             <input type="text"  placeholder="Search for vendors or products" class="form-control">
@@ -19,9 +22,10 @@
         </div>
       </form>
     </div>
+
     <div class="navbar-collapse collapse">   
 
-      <ul class="nav navbar-nav">
+<!--       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a class="dropdown-toggle pointer">Browse <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -32,7 +36,7 @@
             <li><a href="#">Vendors</a></li>
           </ul>
         </li>
-      </ul>    
+      </ul>      -->
 
       <div ng-hide="AuthService.isAuthenticated()">
         <form name="loginForm" class="navbar-form navbar-right sign-in-form" role="form">      
@@ -40,23 +44,53 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a class="dropdown-toggle pointer">Register <span class="caret"></span></a>
+            <a class="dropdown-toggle pointer white-text">Register <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a class="pointer" ng-click="showCustomerSignUp()">As a Customer</a></li>
-              <li><a class="pointer" ng-click="showFarmerSignUp()">As a Farmer or Foodmaker</a></li>
+              <li><a class="pointer white-text" ng-click="showCustomerSignUp()">As a Customer</a></li>
+              <li><a class="pointer white-text" ng-click="showFarmerSignUp()">As a Farmer or Foodmaker</a></li>
             </ul>
           </li>
         </ul> 
       </div> 
+
       <div ng-show="AuthService.isAuthenticated()">
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="pointer" ng-click="displayAccountPage()">My Account</a></li>        
-          <li><a class="pointer" ng-click="AuthService.logout()">Sign Out</a></li>
-        </ul>
+          <li class="dropdown">
+            <a class="dropdown-toggle pointer white-text">My Account<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a class="pointer" ng-click="displayAccountPage()">My Store</a></li>
+              <li><a href="#">Account Settings</a></li>            
+              <li class="divider"></li>
+              <li><a class="pointer" ng-click="AuthService.logout()">Sign Out</a></li>
+            </ul>
+          </li>
+        </ul>  
       </div>
+
+    </div>
+
+  </div>
+
+  <div class="row customer-nav top-nav-large">
+    <div class="col-sm-3 logo">
+      <img src="/images/logo.png">
+    </div>
+    <div class="col-sm-9">
+        <ul class="list-inline nav-shadow ">
+          <li class="active"><a href="#trending" id="trendingTab" data-toggle="tab">In Season Now</a></li>
+          <li><a href="#vendors" id="vendorsTab" data-toggle="tab">Farmers & Foodmakers</a></li>
+          <li><a href="#markets" ng-click="marketMasonry()" id="marketsTab" data-toggle="tab">Local Markets</a></li>  
+        </ul>
     </div>
   </div>
+
 </div>
+
+
+
+
+
+
 
 <div class="modal fade" id="noValidAccountModal">
   <div class="modal-dialog">
