header is working on large display - need to make it responsive

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -76,8 +76,8 @@
       <img src="/images/logo.png">
     </div>
     <div class="col-sm-9">
-        <ul class="list-inline nav-shadow ">
-          <li class="active"><a href="#trending" id="trendingTab" data-toggle="tab">In Season Now</a></li>
+        <ul class="list-inline nav-shadow">
+          <li class="active"><a href="#trending" id="trendingTab" data-toggle="tab">In Season Now<div ng-show="active" class="ng-hide">****</div></a></li>
           <li><a href="#vendors" id="vendorsTab" data-toggle="tab">Farmers & Foodmakers</a></li>
           <li><a href="#markets" ng-click="marketMasonry()" id="marketsTab" data-toggle="tab">Local Markets</a></li>  
         </ul>
