--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/controllers/typeahead.js"></script>
         <script src="scripts/controllers/welcome.js"></script>
         <script src="scripts/controllers/search.js"></script>
+        <script src="scripts/directives/productDetailsModal.js"></script>
         <!-- endbuild -->
 </body>
 </html>
