--- a/src/client/app/scripts/directives/productDetailsModal.html
+++ b/src/client/app/scripts/directives/productDetailsModal.html
@@ -3,31 +3,41 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-body">
-              <div class="row">
-                <div class="col-sm-5 responsive-center">
-                  <div class="thumbnail vendor-card-photo">
-                     <img class="" ng-src="{{product.photo.image_url}}" />
-                  </div>
+                <div class="row first-modal-row">
+                    <div class="col-sm-5 responsive-center">
+                        <div class="thumbnail vendor-card-photo">
+                            <img class="" ng-src="{{product.photo.image_url}}" />
+                        </div>
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="responsive-center">
+                            <h2 class="vendor-card-name product-details-header">{{product.name}}</h2>
+                            <p class="product-details-text no-bottom-margin">
+                                <a class="plain-text-font pointer product-detail-vendor" ng-click="goToVendorDetails(product.vendor.id)">{{product.vendor.company_name}}</a>         
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="small-header">Product Details</div>
+                        <p class="plain-text-font">
+                            {{product.description}}
+                        </p>
+                    </div>
                 </div>
-                <div class="col-sm-7">
-                  <div class="responsive-center">
-                    <h2 class="vendor-card-name product-details-header">{{product.name}}</h2>
-                    <p class="product-details-text no-bottom-margin">
-                      <a class="plain-text-font pointer product-detail-vendor" ng-click="goToVendorDetails(product.vendor.id)">{{product.vendor.company_name}}</a>         
-                    </p>
-                  </div>
-                  <p>
-                    {{product.description}}
-                  </p>
-                </div>
-              </div>            
+                <div class="row" ng-show="product.tags.length > 0">
+                    <div class="col-xs-12">
+                        <hr>
+                        <div class="small-header">Product Tags</div>
+                        <p ng-repeat="tag in product.tags" class="plain-text-font">
+                            {{tag}}
+                        </p>
+                    </div>
+                </div>                
             </div>
-            
             <div class="modal-footer no-top-margin">
                 <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal" ng-click="hideProductDetailsModal()">Close</button>
             </div>
-        <!-- /.modal-content -->
+            <!-- /.modal-content -->
         </div>
-    <!-- /.modal-dialog -->
+        <!-- /.modal-dialog -->
     </div>
 </div>
