--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -98,6 +98,7 @@
         <script src="scripts/controllers/welcome.js"></script>
         <script src="scripts/controllers/search.js"></script>
         <script src="scripts/directives/productDetailsModal.js"></script>
+        <script src="scripts/controllers/marketDetails.js"></script>
         <!-- endbuild -->
 </body>
 </html>
