--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -95,6 +95,7 @@
         <script src="scripts/directives/marketcard.js"></script>
         <script src="scripts/controllers/details.js"></script>        
         <script src="scripts/controllers/welcome.js"></script>
+        <script src="scripts/directives/navbarxs.js"></script>
         <!-- endbuild -->
 </body>
 </html>
