Right-aligned the search bar in XS view...
…and hopefully broke nothing else.

--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -12,7 +12,7 @@
       </button>
       
 
-      <form class="navbar-form navbar-right search-nav-xs" role="search">
+      <form class="navbar-form navbar-right search-nav-xs pull-right" role="search">
         <div class="form-group">
           <div class="input-group">
             <input type="text"  placeholder="Search for vendors or products" class="form-control">
