--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -96,6 +96,7 @@
         <script src="scripts/controllers/details.js"></script>        
         <script src="scripts/controllers/welcome.js"></script>
         <script src="scripts/directives/navbarxs.js"></script>
+        <script src="scripts/directives/footer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
