edited search.html to make it work with new header

--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -23,7 +23,7 @@
         </div>
       </form>
     </div>
-    <div class="navbar-collapse collapse navbar-right">    
+    <div class="navbar-collapse collapse">    
 
       <div ng-hide="AuthService.isAuthenticated()">
         <form name="loginForm" class="navbar-form navbar-right sign-in-form" role="form">      
