--- a/src/client/app/scripts/directives/productDetailsModal.html
+++ b/src/client/app/scripts/directives/productDetailsModal.html
@@ -27,7 +27,7 @@
                     <div class="col-xs-12">
                         <hr>
                         <div class="small-header">Product Tags</div>
-                        <div ng-repeat="tag in product.tags" class="plain-text-font tag-pill-container">
+                        <div ng-repeat="tag in product.tags" ng-click="redirectTagFilter(tag)" class="plain-text-font tag-pill-container">
                             <span class="tag-pill">
                                 {{tag}} <i class="fa fa-chevron-right tag-chevron"></i>
                             </span>
