--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -14,8 +14,10 @@
       <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
 
         <div class="plain-text">
-            <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
-            <br><span class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+            <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
+              <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
+            </span>
+            <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
         </div>
     </div>
     <div class="col-sm-1 no-padding" ng-repeat="product in vendor.products | limitTo:5">
