--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -12,12 +12,11 @@
     </div>
     <div class="col-sm-5">
       <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
-
         <div class="plain-text">
-            <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
-              <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
-            </span>
-            <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
+            <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
+          </span>
+          <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
         </div>
     </div>
     <div class="col-sm-1 no-padding" ng-repeat="product in vendor.products | limitTo:5">
@@ -28,7 +27,7 @@
     </div>
     <div class="col-sm-1 no-padding">
       <div class="vendor-image-container pointer" ng-click="displayVendor(vendor.id)">
-        <div class="center bold-hover" style="">
+        <div class="center bold-hover" style="" ng-show="vendor.products.length > 0">
           <h3 class="logo-green plain-text-font" > {{vendor.products.length}} </h3>
           <h4 class="header-font" style="padding-bottom:15px"> items </div>
         </div>
@@ -47,10 +46,11 @@
     </div>
     <div class="col-xs-4">
       <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
-      
         <div class="plain-text">
+          <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
             <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
-            <br><span class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          </span>
+          <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
         </div>
     </div>
     <div class="col-xs-1 no-padding" ng-repeat="product in vendor.products | limitTo:5">
@@ -62,7 +62,7 @@
     <div class="col-sm-1 no-padding">
       <div class="vendor-image-container pointer" ng-click="displayVendor(vendor.id)">
         <div class="center bold-hover" style="">
-          <h3 class="logo-green plain-text-font" > {{vendor.products.length}} </h3>
+          <h3 class="logo-green plain-text-font" ng-show="vendor.products.length > 0"> {{vendor.products.length}} </h3>
           <h4 class="header-font" style="padding-bottom:15px"> items </div>
         </div>
       </div>
@@ -81,10 +81,11 @@
     </div>
     <div class="col-xs-9">
       <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
-      
         <div class="plain-text">
+          <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
             <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
-            <br><span class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          </span>
+          <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
         </div>
     </div>
   </div>
