fixed navbar collapsing issue

--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -2,7 +2,7 @@
   <div class="container-fluid nav-padding">
     <div class="navbar-header">
 
-      <a class="pointer navbar-brand" ng-click="reloadMainPage()"><img src="/images/logo-light.png"></a>
+      <a class="pointer navbar-brand" ng-click="reloadMainPage()"><img src="/images/logo-simple.png"></a>
 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
