Added superusers + superuser view
This adds the ability for superusers to sign into our system and manage
vendors.

I have deleted all server-side scripts for activating/adding Vendors
since it made little sense to leave these around. Instead, we have a
script called addSuperUser.py which will make a registered user (either
a customer or a vendor… it doesn’t matter which) into a superuser based
on their id.

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -24,7 +24,7 @@
         <div style="clear:both"/>
       </div> 
 
-      <div ng-show="AuthService.isAuthenticated()">
+      <div ng-show="AuthService.isAuthenticated() && StateService.getUserType() === 'VEN'">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
@@ -38,6 +38,24 @@
         </ul>  
       </div>
 
+      <div ng-show="AuthService.isAuthenticated() && StateService.getUserType() === 'CUS'">
+          <ul class="nav navbar-nav navbar-right">
+              <li><a class="pointer" ng-click="AuthService.logout()">Sign Out</a></li>
+          </ul>  
+      </div>      
+
+      <div ng-show="AuthService.isAuthenticated() && StateService.getUserType() === 'SUP'">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
+            <ul class="dropdown-menu dropdown-menu-right" role="menu">
+              <li><a class="pointer" ng-click="goToManage()">Manage Vendors</a></li>        
+              <li class="divider"></li>
+              <li><a class="pointer" ng-click="AuthService.logout()">Sign Out</a></li>
+            </ul>
+          </li>
+        </ul>  
+      </div>     
     </div>
     
       <form class="navbar-form beLocal-search pull-right" role="search" ng-submit="doSearch(search)">
