--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -101,6 +101,7 @@
         <script src="scripts/controllers/search.js"></script>
         <script src="scripts/directives/productDetailsModal.js"></script>
         <script src="scripts/controllers/marketDetails.js"></script>
+        <script src="scripts/controllers/manage.js"></script>
         <!-- endbuild -->
 </body>
 </html>
