--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -19,6 +19,10 @@
           <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
         </div>
     </div>
+    <div ng-show="StateService.getUserType() === 'SUP'" class="col-sm-6" style="text-align:right;">
+      <button class="btn btn-danger" ng-show="vendor.is_active" ng-click="activateVendor(vendor)">Deactivate</button>
+      <button class="btn btn-success" ng-hide="vendor.is_active" ng-click="activateVendor(vendor)">Activate</button>      
+    </div>
     <div ng-show="vendor.products.length < 5" class="col-sm-{{5 - vendor.products.length}}"></div>
     <div class="col-sm-1 no-padding" ng-repeat="product in vendor.products | limitTo:5">
       <div class="vendor-image-container pointer" data-toggle="modal" data-target=".product-details-model" ng-click="showProductDetailsModal(product)">
@@ -63,8 +67,8 @@
     </div>
     <div class="col-sm-1 no-padding">
       <div class="vendor-image-container pointer" ng-click="displayVendor(vendor.id)">
-        <div class="center bold-hover" style="">
-          <h3 class="logo-green plain-text-font" ng-show="vendor.products.length > 0"> {{vendor.products.length}} </h3>
+        <div class="center bold-hover" style="" ng-show="vendor.products.length > 0">
+          <h3 class="logo-green plain-text-font" > {{vendor.products.length}} </h3>
           <h4 class="header-font" style="padding-bottom:15px"> items </div>
         </div>
       </div>
