--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -102,6 +102,7 @@
         <script src="scripts/directives/productDetailsModal.js"></script>
         <script src="scripts/controllers/marketDetails.js"></script>
         <script src="scripts/controllers/manage.js"></script>
+        <script src="scripts/directives/beLocalMap.js"></script>
         <!-- endbuild -->
 </body>
 </html>
