--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -34,7 +34,7 @@
       <div class="vendor-image-container pointer" ng-click="displayVendor(vendor.id)">
         <div class="center bold-hover" style="" ng-show="vendor.products.length > 0">
           <h3 class="logo-green plain-text-font" > {{vendor.products.length}} </h3>
-          <h4 class="header-font" style="padding-bottom:15px"> items </div>
+          <h4 class="header-font" style="padding-bottom:15px"> item<span ng-hide="vendor.products.length === 1">s</span> </div>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
       <div class="vendor-image-container pointer" ng-click="displayVendor(vendor.id)">
         <div class="center bold-hover" style="" ng-show="vendor.products.length > 0">
           <h3 class="logo-green plain-text-font" > {{vendor.products.length}} </h3>
-          <h4 class="header-font" style="padding-bottom:15px"> items </div>
+          <h4 class="header-font" style="padding-bottom:15px"> item<span ng-hide="vendor.products.length === 1">s</span> </div>
         </div>
       </div>
     </div>
