Updated tab appearance slightly.
Also disabled all active styles when a user is not on the main page.
This is what I’ve seen a few sites do, and to me, it makes more sense
than having (for instance) the Farmers tab highlighted when viewing the
Vendor Details page.

I also disabled auto-scrolling to anchors (#’s) in app.js to prevent
the weird scrolling behaviour we were getting when switching tabs.

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -81,7 +81,7 @@
       </div>
       <div style="float:left" class="">
         <ul class="list-inline nav-shadow">
-          <li class="active"><a class="pointer" data-target="#trending" data-toggle="tab" ng-click="setHash('trending'); trendingMasonry()" id="trendingTab">
+          <li ng-class="{active : state.$current.name === 'main'}"><a class="pointer" data-target="#trending" data-toggle="tab" ng-click="setHash('trending'); trendingMasonry()" id="trendingTab">
             <span class="hidden-sm hidden-xs no-block">In Season Now</span>
             <span class="hidden-md hidden-lg no-block">In Season</span>
           </a></li>
