--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -45,7 +45,7 @@
 
       <div class="visible-xs">
         <ul class="nav navbar-nav">
-          <li><a class="pointer" data-target="#trending" data-toggle="tab" ng-click="setHash('trending'); trendingMasonry()" id="trendingTab">In Season Now</a></li>
+          <li ng-class="{active : state.$current.name === 'main'}"><a class="pointer" data-target="#trending" data-toggle="tab" ng-click="setHash('trending'); trendingMasonry()" id="trendingTab">In Season Now</a></li>
           <li><a data-target="#vendors" class="pointer" data-toggle="tab" ng-click="setHash('vendors');" id="vendorsTab">Farmers & Foodmakers</a></li>
           <li><a data-target="#markets" class="pointer" data-toggle="tab" ng-click="setHash('markets'); marketMasonry()" id="marketsTab">Local Markets</a></li>  
         </ul>
