--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -4,7 +4,6 @@
 <!-- TOP PART OF NAVBAR -->
   <div class="container-fluid nav-bar-top">
 
-
     <div class="pull-right" style="float:left">
       <div ng-hide="AuthService.isAuthenticated()">
         <form name="loginForm" class="navbar-form sign-in-form" role="form" style="float:right">      
@@ -21,7 +20,7 @@
             </li>
           </ul> 
         </div> 
-        <div style="clear:both"/>
+        <div style="clear:both"></div>
       </div> 
 
       <div ng-show="AuthService.isAuthenticated() && StateService.getUserType() === 'VEN'">
@@ -58,23 +57,23 @@
       </div>     
     </div>
     
-      <form class="navbar-form beLocal-search pull-right" role="search" ng-submit="doSearch(search)">
-        <div class="form-group">
-          <div class="input-group">
-            <input type="text" ng-model="search" placeholder="Search for vendors or products" class="form-control"
-              ng-bind-html="match.label | typeaheadHighlight:query" 
-              typeahead-on-select='onSelect($item, $model, $label)' 
-              typeahead="product.name for product in updateProductSuggestions($viewValue)">
-            <span class="input-group-btn">
-              <button class="btn beLocal-btn-filled" type="submit">Search</button>
-            </span>
-          </div>    
-        </div>
-      </form>
+    <form class="navbar-form beLocal-search pull-right" role="search" ng-submit="doSearch(search)">
+      <div class="form-group">
+        <div class="input-group">
+          <input type="text" ng-model="search" placeholder="Search for vendors or products" class="form-control"
+            ng-bind-html="match.label | typeaheadHighlight:query" 
+            typeahead-on-select='onSelect($item, $model, $label)' 
+            typeahead="product.name for product in updateProductSuggestions($viewValue)">
+          <span class="input-group-btn">
+            <button class="btn beLocal-btn-filled" type="submit">Search</button>
+          </span>
+        </div>    
+      </div>
+    </form>
   </div>
 
-<!-- BOTTOM PART OF HEADER -->
-  <div class="row customer-nav top-nav-large">
+  <!-- BOTTOM PART OF HEADER -->
+  <div class="row customer-nav top-nav-large" style="margin-right: 0px;">
     <div class="header-container">
       <div class="logo-header" style="float:left">
         <a class="pointer" ng-click="reloadMainPage()"><img src="/images/logo.png"></a>
@@ -94,30 +93,25 @@
             <span class="hidden-md hidden-lg no-block">Markets</span>
           </a></li>  
         </ul>
-      <div>  
-        </ul>
       </div>
-      <div style="clear:both"/>
+      <div style="clear:both"></div>
     </div>
   </div>
 
+  <div class="modal fade" id="noValidAccountModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title">No Valid Account</h4>
+        </div>
+        <div class="modal-body">
+          <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try signing up using the Register button first!</p>
+        </div>
+        <div class="modal-footer no-top-margin">
+          <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 </div>
-
-
-
-<div class="modal fade" id="noValidAccountModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">No Valid Account</h4>
-      </div>
-      <div class="modal-body">
-        <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try signing up using the Register button first!</p>
-      </div>
-      <div class="modal-footer no-top-margin">
-        <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal">Close</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
