--- a/src/client/app/scripts/directives/footer.html
+++ b/src/client/app/scripts/directives/footer.html
@@ -13,5 +13,5 @@
 
 <div class="footerCopyright">
   <span class="glyphicon glyphicon-copyright-mark" style="font-size:12px;"></span>
-   2014 beLocal Victoria. 
+   <span style="margin-right:10px;">2014 beLocal Victoria</span> | <a style="color:white;margin-left:10px;margin-right:10px;" href="https://github.com/rpanjwani/beLocal/wiki/Privacy-Policy">Privacy Policy</a> |
 </div>
