--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -13,10 +13,13 @@
     <div class="col-sm-5">
       <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
         <div class="plain-text">
-          <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
-            <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
+          <span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          <br><span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
+            {{vendor.address.city}}, {{vendor.address.state}}
           </span>
-          <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          <div ng-show="vendor.selling_locations.length != 0">
+              {{vendor.selling_locations.length}} local selling location<span ng-show="vendor.selling_locations.length != 1">s</span>
+          </div>
         </div>
     </div>
     <div ng-show="currentState.name === 'manage'" class="col-sm-5" style="text-align:right;">
@@ -52,10 +55,13 @@
     <div class="col-xs-5">
       <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
         <div class="plain-text">
-          <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
-            <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
+          <span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          <br><span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
+            {{vendor.address.city}}, {{vendor.address.state}}
           </span>
-          <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          <div ng-show="vendor.selling_locations.length != 0">
+              {{vendor.selling_locations.length}} local selling location<span ng-show="vendor.selling_locations.length != 1">s</span>
+          </div>
         </div>
     </div>
     <div ng-show="vendor.products.length < 4" class="col-sm-{{4 - vendor.products.length}}"></div>    
@@ -88,10 +94,13 @@
     <div class="col-xs-9">
       <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
         <div class="plain-text">
-          <span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
-            <span class="glyphicon glyphicon-map-marker"></span> {{vendor.address.addr_line1}}, {{vendor.address.city}}, {{vendor.address.state}}
+          <span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          <br><span ng-show="vendor.address.addr_line1 != null && vendor.address.city != null && vendor.address.state != null">
+            {{vendor.address.city}}, {{vendor.address.state}}
           </span>
-          <br><span ng-show="vendor.phone != null" class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}
+          <div ng-show="vendor.selling_locations.length != 0">
+              {{vendor.selling_locations.length}} local selling location<span ng-show="vendor.selling_locations.length != 1">s</span>
+          </div>
         </div>
     </div>
   </div>
