--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -103,6 +103,7 @@
         <script src="scripts/controllers/marketDetails.js"></script>
         <script src="scripts/controllers/manage.js"></script>
         <script src="scripts/directives/beLocalMap.js"></script>
+        <script src="scripts/controllers/contactus.js"></script>
         <!-- endbuild -->
 </body>
 </html>
