Fixed the dead link in the navigation bars

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -28,8 +28,7 @@
           <li class="dropdown">
             <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
             <ul class="dropdown-menu dropdown-menu-right" role="menu">
-              <li><a class="pointer" ng-click="displayAccountPage()">My Store</a></li>
-              <li><a href="#">Account Settings</a></li>            
+              <li><a class="pointer" ng-click="displayAccountPage()">My Profile</a></li>          
               <li class="divider"></li>
               <li><a class="pointer" ng-click="AuthService.logout()">Sign Out</a></li>
             </ul>
