Fixed nav bar responsiveness for mobile screen size 320px

--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -2,7 +2,10 @@
   <div class="container-fluid nav-padding">
     <div class="navbar-header">
 
-      <a class="pointer navbar-brand" ng-click="reloadMainPage()"><img src="/images/logo-simple.png"></a>
+      <a class="pointer navbar-brand" ng-click="reloadMainPage()">
+        <span class="full-logo"><img src="/images/logo-simple.png"></span>
+        <span class="small-logo"><img src="favicon.png"></span>
+      </a>
 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
