Fixed footer responsiveness for mobile

--- a/src/client/app/scripts/directives/footer.html
+++ b/src/client/app/scripts/directives/footer.html
@@ -12,7 +12,14 @@
 </div> -->
 
 <div class="footerCopyright">
-  <span class="glyphicon glyphicon-copyright-mark" style="font-size:12px;"></span>
-   <span style="margin-right:10px;">2014 beLocal Victoria</span> | <a class="footerLink" href="https://github.com/rpanjwani/beLocal/wiki/Privacy-Policy">Privacy Policy</a> |
-   <a class="footerLink" href="#/contact-us">Contact Us</a>
+  <span class="display-inline-block">
+    <span class="glyphicon glyphicon-copyright-mark" style="font-size:12px;"></span> 
+    <span style="margin-right:10px;">2014 beLocal Victoria</span>  
+  </span>
+  <span class="display-inline-block">
+     | <a class="footerLink" href="https://github.com/rpanjwani/beLocal/wiki/Privacy-Policy">Privacy Policy</a> 
+  </span>
+  <span class="display-inline-block">
+     | <a class="footerLink" href="#/contact-us">Contact Us</a> 
+  </span>
 </div>
