--- a/src/client/app/scripts/directives/footer.html
+++ b/src/client/app/scripts/directives/footer.html
@@ -20,6 +20,15 @@
      | <a class="footerLink" href="https://github.com/rpanjwani/beLocal/wiki/Privacy-Policy">Privacy Policy</a> 
   </span>
   <span class="display-inline-block">
-     | <a class="footerLink" href="#/contact-us">Contact Us</a> 
+     | <a class="footerLink" href="#/about-us">About Us</a> 
   </span>
+  <span class="display-inline-block">
+     | <a class="footerLink" href="mailto:{{emailAddress}}">Email</a> 
+  </span>  
+  <span class="display-inline-block">
+     | <a class="footerLink" href="https://www.facebook.com/pages/BeLocal-Victoria/529601947175739">Facebook</a> 
+  </span>
+  <span class="display-inline-block">
+     | <a class="footerLink" href="https://twitter.com/beLocalVictoria">Twitter</a> 
+  </span>    
 </div>
