--- a/src/client/app/scripts/directives/productCard.html
+++ b/src/client/app/scripts/directives/productCard.html
@@ -4,7 +4,7 @@
 
         <div class="row">
         <div class="col-sm-12 like-button-container">
-            <div data-toggle="tooltip" style="display:inline-block" data-placement="bottom" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+            <div data-toggle="tooltip" style="display:inline-block" data-placement="left" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
               <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(item, 'product')" type="button" class="btn btn-default beLocal-btn-default">
                   <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : item.is_liked}"></span>
                   <span ng-hide="item.is_liked">Like</span>
