Replaced instances of customer with foodie

--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -39,7 +39,7 @@
           <li class="dropdown">
             <a class="dropdown-toggle pointer">Register <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a class="pointer" ng-click="showCustomerSignUp()">As a Customer</a></li>
+              <li><a class="pointer" ng-click="showCustomerSignUp()">As a Foodie</a></li>
               <li><a class="pointer" ng-click="showFarmerSignUp()">As a Farmer or Foodmaker</a></li>
             </ul>
           </li>
@@ -86,10 +86,6 @@
           </li>
         </ul>  
       </div>        
-
-    </div>
-
-
 
     </div>
   </div>
