--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -14,7 +14,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle pointer">Register <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a class="pointer white-text" ng-click="showCustomerSignUp()">As a Customer</a></li>
+                <li><a class="pointer white-text" ng-click="showCustomerSignUp()">As a Foodie</a></li>
                 <li><a class="pointer white-text" ng-click="showFarmerSignUp()">As a Farmer or Foodmaker</a></li>
               </ul>
             </li>
